force-app/main/default/objects/ProductSubscription_POC__c/ProductSubscription_POC__c.object-meta.xml
<CustomObject>
    <label>ProductSubscriptionBuilder</label>
    <nameField>
        <displayFormat>APS-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>ProductSubscription_POC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProductSubscriptions_POC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>