force-app/main/default/objects/ProductSubscription_POC__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>concatenation of Accoutn and PRoduct IDs</description>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>