force-app/main/default/objects/ProductSubscription_POC__c/fields/MaxItemOrder__c.field-meta.xml
<CustomField>
    <fullName>MaxItemOrder__c</fullName>
    <description>Serve only  debugging purposes.  It pull the max  value  of the Item order form child Items</description>
    <inlineHelpText>Serve only  debugging purposes.  It pull the max  value  of the Item order form child Items</inlineHelpText>
    <label>MaxItemOrder</label>
    <summarizedField>Product_SubscriptionItem__c.itemOrder__c</summarizedField>
    <summaryForeignKey>Product_SubscriptionItem__c.ParentSubscription__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>