force-app/main/default/objects/ProductSubscription_POC__c/fields/NrOfItems__c.field-meta.xml
<CustomField>
    <fullName>NrOfItems__c</fullName>
    <label>NrOfItems</label>
    <summaryForeignKey>Product_SubscriptionItem__c.ParentSubscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>