force-app/main/default/objects/ProductSubscription_POC__c/fields/NrOfItemsConsolidated__c.field-meta.xml
<CustomField>
    <fullName>NrOfItemsConsolidated__c</fullName>
    <inlineHelpText>Number of  consolidated items</inlineHelpText>
    <label>Number of ConsolidatedItems</label>
    <summaryFilterItems>
        <field>Product_SubscriptionItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Consolidated</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_SubscriptionItem__c.ParentSubscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>