force-app/main/default/objects/ProductSubscription_POC__c/fields/NrofOnBehalfItems__c.field-meta.xml
<CustomField>
    <fullName>NrofOnBehalfItems__c</fullName>
    <label>NrofOnBehalf Items</label>
    <summaryFilterItems>
        <field>Product_SubscriptionItem__c.Creation_Type__c</field>
        <operation>equals</operation>
        <value>on-Behalf</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Product_SubscriptionItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>QLI Based</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_SubscriptionItem__c.ParentSubscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>