force-app/main/default/objects/ProductSubscription_POC__c/fields/NrOfQLI_Items__c.field-meta.xml
<CustomField>
    <fullName>NrOfQLI_Items__c</fullName>
    <description>number of non Consolidated items (shoild be equal with the Number of Expected items)</description>
    <label>NrOf QLI Items</label>
    <summaryFilterItems>
        <field>Product_SubscriptionItem__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>QLI Based</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_SubscriptionItem__c.ParentSubscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>