force-app/main/default/objects/ProductSubscription_POC__c/fields/Number_of_Expected_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expected_Items__c</fullName>
    <description>When header and Items are created  we  should know the numbr of  expected  items.  Used during debug</description>
    <label>Number of Expected Items</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>