force-app/main/default/objects/ProductSubscription_POC__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREATED</fullName>
            </value>
            <value>
                <fullName>CONSOLODATED</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>RESET</fullName>
            </value>
            <value>
                <fullName>CONSOLIDATED_2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>