force-app/main/default/objects/ProductSubscription_POC__c/fields/UnsortedItems__c.field-meta.xml
<CustomField>
    <fullName>UnsortedItems__c</fullName>
    <label>UnsortedItems</label>
    <summaryFilterItems>
        <field>Product_SubscriptionItem__c.itemOrder__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Product_SubscriptionItem__c.ParentSubscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>