force-app/main/default/objects/ProductSubscription_POC__c/listViews/All_cancas12.listView-meta.xml
<ListView>
    <fullName>All_cancas12</fullName>
    <columns>NAME</columns>
    <columns>MaxItemOrder__c</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NrOfQLI_Items__c</columns>
    <columns>Number_of_Expected_Items__c</columns>
    <columns>NrofOnBehalfItems__c</columns>
    <columns>NrOfItemsConsolidated__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>01tA0000005pCsk</value>
    </filters>
    <label>All_canvas12</label>
    <language>en_US</language>
</ListView>