force-app/main/default/objects/ProductSubscription_POC__c/listViews/All_NEW.listView-meta.xml
<ListView>
    <fullName>All_NEW</fullName>
    <columns>NAME</columns>
    <columns>MaxItemOrder__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Number_of_Expected_Items__c</columns>
    <columns>NrOfQLI_Items__c</columns>
    <columns>NrofOnBehalfItems__c</columns>
    <columns>NrOfItemsConsolidated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All_NEW</label>
    <language>en_US</language>
</ListView>